# tap-klass

./: .gitignore  LICENSE  README.md  meltano.yml  pyproject.toml
tap_klass/: __init__.py  client.py  streams.py  tap.py
tests/: __init__.py  test_core.py
